# LCDWIKI-drivers-idf

./: CMakeLists.txt  LCDWIKI_SPI.cpp  LCDWIKI_SPI.h  README.md
LCDWIKI_GUI/: README.md
LCDWIKI_SPI/: LCDWIKI_SPI.cpp  mcu_spi_magic.h
examples/Demo_UNO_Hardware_SPI/Example_01_clear_screen/clear_Screen/: clear_Screen.ino
examples/Demo_UNO_Hardware_SPI/Example_02_colligate_test/colligate_test/: colligate_test.ino
examples/Demo_UNO_Hardware_SPI/Example_03_display_string/display_string/: display_string.ino
examples/Demo_UNO_Hardware_SPI/Example_04_display_graph/display_graph/: display_graph.ino
examples/Demo_UNO_Hardware_SPI/Example_05_display_scroll/display_scroll/: display_scroll.ino
examples/Demo_UNO_Software_SPI/Example_01_clear_screen/clear_Screen/: clear_Screen.ino
examples/Demo_UNO_Software_SPI/Example_02_colligate_test/colligate_test/: colligate_test.ino
examples/Demo_UNO_Software_SPI/Example_03_display_string/display_string/: display_string.ino
examples/Demo_UNO_Software_SPI/Example_04_display_graph/display_graph/: display_graph.ino
examples/Demo_UNO_Software_SPI/Example_05_display_scroll/display_scroll/: display_scroll.ino
src/LCDWIKI_GUI/: LCDWIKI_GUI.cpp  LCDWIKI_GUI.h  LCDWIKI_font.c
src/LCDWIKI_SPI/: LCDWIKI_SPI.cpp  LCDWIKI_SPI.h  README.md
